perf: renomeando funções + pequenos detalhes